# temp

./: .gitignore  README.md
actual_robot_design/urdf/: complete assembly with arm step_21_01_2026.csv  complete assembly with arm step_21_01_2026.urdf
cleaning_robot_bringup/: CMakeLists.txt  package.xml
cleaning_robot_bringup/config/: laser_filter.yaml  my_controllers.yaml
cleaning_robot_bringup/firmware/rs485_bridge/: rs485_bridge.ino
cleaning_robot_bringup/launch/: debug_manual_slam.launch.py  exploration_launch.py  full_system.launch.py  joystick.launch.py  launch_robot.launch.py  real_system.launch.py  rplidar.launch.py  rsp.launch.py
cleaning_robot_bringup/scripts/: auto_kickstart.py  auto_localize.py  exploration_manager.py  odom_tf_publisher.py  test_zlac8015d.py  waypoint_manager.py  web_server.py
cleaning_robot_bringup/web_ui/: app.js  index.html  style.css
cleaning_robot_description/: CMakeLists.txt  package.xml
cleaning_robot_description/launch/: view_bot.launch.py  view_remote.launch.py
cleaning_robot_description/meshes/: back_left_caster_link.stl  back_right_caster_link.stl  front_left_caster_link.stl  front_right_caster_link.stl  lidar_link.stl
cleaning_robot_description/rviz/: view_robot.rviz
cleaning_robot_description/urdf/: ignition_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
cleaning_robot_gazebo/: CMakeLists.txt  package.xml
cleaning_robot_gazebo/config/: my_controllers.yaml
cleaning_robot_gazebo/launch/: launch_ignition.launch.py  launch_sim.launch.py
cleaning_robot_gazebo/worlds/: cafe.world
cleaning_robot_navigation/: CMakeLists.txt  package.xml
cleaning_robot_navigation/config/: explore_params.yaml  mapper_params_localization.yaml  mapper_params_online_async.yaml  nav2_params.yaml
cleaning_robot_navigation/launch/: localization_launch.py  navigation_launch.py  navigation_manual.launch.py  online_async_launch.py  slam.launch.py
cleaning_robot_navigation/maps/: cafe_map.pgm  cafe_map.yaml  my_map.pgm  my_map.yaml  my_map_2.pgm  my_map_2.yaml  my_map_3.pgm  my_map_3.yaml  my_map_new.pgm  my_map_new.yaml  my_map_new_2.pgm  my_map_new_2.yaml
diffdrive_arduino/src/: arduino_comms.cpp  diffdrive_arduino.cpp
diffdrive_zlac8015d/: CMakeLists.txt  package.xml  robot_hardware.xml
diffdrive_zlac8015d/include/diffdrive_zlac8015d/: config.h  diffdrive_zlac8015d.h  wheel.h  zlac_comms.h
diffdrive_zlac8015d/src/: diffdrive_zlac8015d.cpp  wheel.cpp  zlac_comms.cpp
m-explore-ros2/explore/include/explore/: explore.h
m-explore-ros2/explore/src/: explore.cpp
