<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cleaning_robot_bringup</name>
  <version>0.0.0</version>
  <description>Bringup scripts and launch files for cleaning_robot</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>cleaning_robot_description</exec_depend>
  <exec_depend>cleaning_robot_gazebo</exec_depend>
  <exec_depend>cleaning_robot_navigation</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>laser_filters</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
